<resources>
    <string name="app_name">Fizykor</string>
    <string name="banner_ad_unit_id">ca-app-pub-8124828420072466/9435660038</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">O nas, kliknij !!</string>
    <string name="kinematyka">Kinematyka</string>
    <string name="gallery">Gallery</string>
    <string name="praca_moc_energia">Praca moc energia</string>
    <string name="bry_a_sztywna">Bryła sztywna</string>
    <string name="termodynamika">Termodynamika</string>
    <string name="grawitacja_i_kosmos">Grawitacja i kosmos</string>
    <string name="ruch_drgaj_cy">Ruch drgający</string>
    <string name="fale_mechaniczne">Fale mechaniczne</string>
    <string name="zagadnienia">Zagadnienia</string>
    <string name="wi_cej">Więcej</string>
    <string name="dynamika">Dynamika</string>
    <string name="ruch_jednostajny">Ruch jednostajny</string>
    <string name="ruch_jednostajnie_zmienny">Ruch jednostajnie zmienny</string>
    <string name="r_wnania_ruchu">Równania ruchu</string>
    <string name="spadek_swobodny">Spadek swobodny i rzut pionowy</string>
    <string name="droga_w_ruchu_jednostajnie_zmiennym">Droga w ruchu jednostajnie zmiennym</string>
    <string name="rzut_poziomy">Rzut poziomy</string>
    <string name="rzut_uko_ny">Rzut ukośny</string>
    <string name="ruch_po_okr_gu">Ruch po okręgu</string>
    <string name="droga_k_towa_w_ruchu_po_okr_gu">Droga kątowa i prędkość kątowa końcowa</string>
    <string name="pierwsza_zasada_dynamiki">Pierwsza zasada dynamiki</string>
    <string name="druga_zasada_dynamiki">Druga zasada dynamiki i pęd</string>
    <string name="trzecia_zasada_dynamiki">Trzecia zasada dynamiki</string>
    <string name="dynamiczne_r_wania_ruchu">Dynamiczne rówania ruchu</string>
    <string name="tarcie">Tarcie</string>
    <string name="r_wnia_pochy_a">Równia pochyła</string>
    <string name="niewa_ko_i_winda">Nieważkość i winda</string>
    <string name="praca">Praca</string>
    <string name="moc">Moc</string>
    <string name="energia_potencjalna">Energia Potencjalna</string>
    <string name="energia_potencjalna_spr_ysto_ci">Energia Potencjalna Sprężystości</string>
    <string name="moment_si_y">Moment Siły</string>
    <string name="przy_pieszenie_do_rodkowe">Przyśpieszenie dośrodkowe</string>
    <string name="ruch_obrotowy">Ruch Obrotowy</string>
    <string name="zale_no_ci_mi_dzy_warto_ciami_liniowymi_a_k_towymi">Zależności między wartościami liniowymi a kątowymi</string>
    <string name="moment_bezw_adno_ci">Moment Bezwładności</string>
    <string name="pierwsza_zasada_dynamiki_ruchu_obrotowego">Pierwsza zasada dynamiki ruchu obrotowego</string>
    <string name="druga_zasada_dynamiki_ruchu_obrotowego">Druga zasada dynamiki ruchu obrotowego</string>
    <string name="dynamiczne_r_wnania_ruchu_obrotowego">Dynamiczne równania ruchu obrotowego</string>
    <string name="moment_p_du">Moment pędu</string>
    <string name="energia_kinetyczna_ruchu_obrotowego">Energia kinetyczna ruchu obrotowego</string>
    <string name="pr_dko_rednia">Prędkość średnia</string>
    <string name="skala_kelwina">Skala Kelwina</string>
    <string name="cz_steczka">Liczba moli</string>
    <string name="r_wnanie_clapeyrona">Równania gazu doskonałego i rzeczywistego</string>
    <string name="przemiana_izotermiczna_t_const">Przemiana Izotermiczna T=const</string>
    <string name="przemina_izobaryczna_p_const">Przemina izobaryczna p=const</string>
    <string name="przemiana_izohoryczna_v_const">Przemiana izohoryczna V=const</string>
    <string name="przemiana_adiabatyczna_q_const">Przemiana adiabatyczna Q=const</string>
    <string name="energia_kinetyczna">Średnia energia kinetyczna</string>
    <string name="pierwsza_zasada_termodynamiki">Pierwsza zasada termodynamiki</string>
    <string name="druga_zasada_termodynamiki">Druga zasada termodynamiki</string>
    <string name="entropia">Entropia</string>
    <string name="sprawno">Sprawność</string>
    <string name="ci_nienie_i_obj_to">Gęstość i ciśnienie</string>
    <string name="ciep_o_w_a_ciwe">Ciepło właściwe</string>
    <string name="pierwsze_prawo_keplera">Pierwsze prawo Keplera i układ słoneczny</string>
    <string name="drugie_prawo_keplera">Drugie prawo Keplera</string>
    <string name="prawo_powszechnego_ci_enia">Prawo powszechnego ciążenia</string>
    <string name="przy_pieszenie_grawitacyjne">Przyśpieszenie grawitacyjne</string>
    <string name="nat_enie_pola_grawitacyjnego">Natężenie pola grawitacyjnego</string>
    <string name="potencja_pola_grawitacyjnego">Potencjał pola grawitacyjnego</string>
    <string name="praca_w_polu_grawitacyjnym">Praca w polu grawitacyjnym</string>
    <string name="ca_kowita_energia">Energia kinetyczna i całkowita</string>
    <string name="pr_dko_i_pr_dko_ci_kosmiczne">Prędkość</string>
    <string name="pr_dko_ci_kosmiczne">Prędkości kosmiczne</string>
    <string name="po_o_enie_od_czasu">Położenie od czasu</string>
    <string name="pr_dko_od_czasu">Prędkość od czasu</string>
    <string name="przy_pieszenie_od_czasu">Przyśpieszenie od czasu</string>
    <string name="praca_i_energia">Praca i energia</string>
    <string name="zale_no_energi_od_czasu">Zależność energii od czasu</string>
    <string name="wahad_o_matematyczne">Wahadło matematyczne</string>
    <string name="wahad_o_fizyczne">Wahadło Fizyczne</string>
    <string name="si_aA">Siła</string>
    <string name="odleglosci">Odległości w kosmosie</string>
    <string name="pr_dko_fali">Prędkość fali</string>
    <string name="r_wnanie_fali">Równanie fali</string>
    <string name="interferencja_fali">Interferencja fali</string>
    <string name="wypadkowa_amplituda_fali">Wypadkowa amplituda fali</string>
    <string name="maksymalne_wzmocnienie_fali">Maksymalne wzmocnienie fali</string>
    <string name="maksymalne_wygaszenie_fali">Maksymalne wygaszenie fali</string>
    <string name="nat_enie_fal_i">Natężenie fali</string>
    <string name="piszcza_ka_otwarta">Piszczałka otwarta</string>
    <string name="piszcza_ka_zamkni_ta">Piszczałka zamknięta</string>
    <string name="elektrostatyka">Elektrostatyka</string>
    <string name="pr_d_sta_y">Prąd stały</string>
    <string name="magnetyzm">Magnetyzm</string>
    <string name="adunek_cz_stek">Ładunek cząstek</string>
    <string name="potencja_pola_elektrostatycznego">Potencjał pola elektrostatycznego</string>
    <string name="energia_potencjalna_pola_elektrostatycznego">Energia potencjalna pola elektrostatycznego</string>
    <string name="praca_w_polu_elekstrostatycznym">Praca w polu elekstrostatycznym</string>
    <string name="pojemno_kondensatora">Pojemność kondensatora</string>
    <string name="nat_enie_pola_elektrostatycznego">Natężenie pola elektrostatycznego</string>
    <string name="po_czenie_szeregowe_kondensator_w">Połączenie szeregowe kondensatorów</string>
    <string name="po_czenie_r_wnoleg_e_kondensator_w">Połączenie równoległe kondensatorów</string>
    <string name="nat_zenie_pola_elektrostatycznego_kuli">Natęzenie pola elektrostatycznego kuli</string>
    <string name="praca_w_kondensatorach">Praca w kondensatorach</string>
    <string name="si_a_elektrostatyczna">Siła elektrostatyczna</string>
    <string name="nat_enie_pola_grawitacyjnego_ziemi">Natężenie pola grawitacyjnego ziemi</string>
    <string name="nat_enie_pr_du">Natężenie prądu</string>
    <string name="g_sto_pr_du_i_pr_dko_unoszenia_adunku">Gęstość prądu i prędkość unoszenia ładunku</string>
    <string name="op_r_elektryczny_i_op_r_w_a_ciwy">Opór elektryczny i opór właściwy</string>
    <string name="prawo_ohma">Prawo Ohma</string>
    <string name="po_czenie_szeregowe_opornik_w">Połączenie szeregowe oporników</string>
    <string name="po_czenie_r_wnoleg_e_opornik_w">Połączenie równoległe oporników</string>
    <string name="prawo_ohma_dla_obowdu_zamkni_tego">Prawo Ohma dla obowdu zamkniętego</string>
    <string name="si_a_elektromotoryczna">Siła elektromotoryczna</string>
    <string name="pr_d_zwarcia_i_moc_obwodu">Prąd zwarcia, moc obwodu, praca w pętli</string>
    <string name="predkoscJednostajny">Prędkość w ruchu jednostajnym</string>
    <string name="predkosczmienny">Prędkość w ruchu zmiennym</string>
    <string name="przyspieszenieZmienny">Przyśpieszenie w ruchu zmiennym</string>
    <string name="drogaZmienny1">Droga w ruchu zmiennym</string>
    <string name="drogaZmienny2">Droga w ruchu zmiennym z wyk. czasu i prędkości końcowej</string>
    <string name="drogaZmienny3">Droga w ruchu zmiennym z wyk. przyspieszenia i predkości koncowej</string>
    <string name="stosunkiDrog">Stosunki dróg przebytych przez ciało w ruchu jednostajnie przyspieszonym bez predkości początkowej</string>
    <string name="rowRuchV">Równanie ruchu v(t)</string>
    <string name="RowRuchuT">Równanie ruchu x(t)</string>
    <string name="Spadek">Wysokość od czasu w spadku swobodnym h(t)</string>
    <string name="Zasieg">Zasięg w rzucie poziomym</string>
    <string name="PionowaSkladowa">"Prędkość końcowa pionowej składowej prędkości "</string>
    <string name="TangensAlfa">Tangens kąta alfa w rzucie poziomym</string>
    <string name="PredCal">Prędkośc calłkowita w rzucie poziomym</string>
    <string name="pozioma0ukosny">Prędkosć początkowa pozioma w rzucie ukośnym</string>
    <string name="pionow0ukosny">Prędkość początkowa pionowa w rzucie ukośnym</string>
    <string name="czasWznoszenia">Czas wznoszenia w rzucie ukośnym</string>
    <string name="kinematykaDwa">KINEMATYKA</string>
    <string name="dynamikaDWA">DYNAMIKA</string>
    <string name="praca_moc_energiaDWA">PRACA, MOC, ENERGIA</string>
    <string name="bry_a_szytywnaDWA">BRYŁA SZYTYWNA</string>
    <string name="termodynamikaDWA">TERMODYNAMIKA</string>
    <string name="grawitacja_kosmosDWA">GRAWITACJA, KOSMOS</string>
    <string name="ruch_drgaj_cyDWA">RUCH DRGAJĄCY</string>
    <string name="fale_mechaniczneDWA">FALE MECHANICZNE</string>
    <string name="elektrostatykaDWA">ELEKTROSTATYKA</string>
    <string name="pr_d_sta_yDWA">PRĄD STAŁY</string>
    <string name="magnetyzmDWA">MAGNETYZM</string>
    <string name="sta_e_fizyczne">Stałe fizyczne</string>
    <string name="przedrostki">Przedrostki</string>
    <string name="sta_e_i_przedrostki">Stałe i przedrostki</string>
    <string name="informacje">Informacje</string>
    <string name="dodatkowo">Dodatkowo</string>
    <string name="indukcja_elektromagnetycznaDWA">INDUKCJA ELEKTROMAG.</string>
    <string name="pr_d_przemienny_i_obwodyDWA">PRĄD PRZEMIENNY, OBW.</string>
    <string name="optykaDWA">OPTYKA</string>
    <string name="fizyka_wsp_czesnaDWA">FIZYKA WSPÓŁCZESNA</string>
    <string name="fiszki_to_tryb_stworzony_do_nauki_wzor_w_zawartych_w_zagadnieniach_tryb_fiszek_dla_okre_lonego_rozdzia_u_zawiera_wszystki_wzory_om_wione_w_rozdziale_aby_zmieni_fiszk_nale_y_przesun_c_palcem_po_ekranie_od_lewej_do_prawej_z_prawej_do_lewej_by_cofn_fiszk_aby_wy_wietli_schowa_fiszk_przytrzymaj_palcem_na_ekranie">Fiszki to tryb stworzony do nauki wzorów zawartych w zagadnieniach. Tryb Fiszek dla określonego rozdziału zawiera wszystki wzory omówione w rozdziale, aby zmienić fiszkę należy przesunąc palcem po ekranie od lewej do prawej, z prawej do lewej by cofnąć fiszkę, aby wyświetlić/schować fiszkę przytrzymaj palcem na ekranie.</string>
    <string name="zagadnienia_zawarte_w_aplikacji_to_podstawy_teorii_fizyki_na_poziomie_maturalnym_opisane_wzorami_zagadnienienia_teoretyczne_b_d_progresywnie_poszerzane_w_kolejnych_aktualizacjach_aplikacji">Zagadnienia zawarte w aplikacji to podstawy teorii Fizyki na poziomie maturalnym opisane wzorami. Zagadnienienia teoretyczne będą progresywnie poszerzane w kolejnych aktualizacjach aplikacji.</string>
    <string name="fiszki">Fiszki</string>
    <string name="fiszki_maturalne">Fiszki maturalne</string>
</resources>